ADD mockito-core in pom.xml ADD HippodromeTest

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,15 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.11.0</version>
+            <version>5.11.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.14.2</version>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
@@ -34,6 +42,7 @@
             <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
+
 
     </dependencies>
     <build>
